--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,23 +1,23 @@
 {
     "workbench.colorCustomizations": {
-        "activityBar.activeBackground": "#ff6433",
-        "activityBar.background": "#ff6433",
+        "activityBar.activeBackground": "#efaf52",
+        "activityBar.background": "#efaf52",
         "activityBar.foreground": "#15202b",
         "activityBar.inactiveForeground": "#15202b99",
-        "activityBarBadge.background": "#00ff3d",
-        "activityBarBadge.foreground": "#15202b",
-        "commandCenter.border": "#e7e7e799",
-        "sash.hoverBorder": "#ff6433",
-        "statusBar.background": "#ff3d00",
-        "statusBar.foreground": "#e7e7e7",
-        "statusBarItem.hoverBackground": "#ff6433",
-        "statusBarItem.remoteBackground": "#ff3d00",
-        "statusBarItem.remoteForeground": "#e7e7e7",
-        "titleBar.activeBackground": "#ff3d00",
-        "titleBar.activeForeground": "#e7e7e7",
-        "titleBar.inactiveBackground": "#ff3d0099",
-        "titleBar.inactiveForeground": "#e7e7e799"
+        "activityBarBadge.background": "#0d925c",
+        "activityBarBadge.foreground": "#e7e7e7",
+        "commandCenter.border": "#15202b99",
+        "sash.hoverBorder": "#efaf52",
+        "statusBar.background": "#eb9923",
+        "statusBar.foreground": "#15202b",
+        "statusBarItem.hoverBackground": "#c97e12",
+        "statusBarItem.remoteBackground": "#eb9923",
+        "statusBarItem.remoteForeground": "#15202b",
+        "titleBar.activeBackground": "#eb9923",
+        "titleBar.activeForeground": "#15202b",
+        "titleBar.inactiveBackground": "#eb992399",
+        "titleBar.inactiveForeground": "#15202b99"
     },
-    "peacock.color": "#ff3d00",
+    "peacock.color": "eb9923",
     "python.analysis.typeCheckingMode": "basic"
 }
