--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,7 +16,10 @@
         "titleBar.activeBackground": "#eb9923",
         "titleBar.activeForeground": "#15202b",
         "titleBar.inactiveBackground": "#eb992399",
-        "titleBar.inactiveForeground": "#15202b99"
+        "titleBar.inactiveForeground": "#15202b99",
+        "editorGroup.border": "#efaf52",
+        "statusBar.debuggingBackground": "#2375eb",
+        "statusBar.debuggingForeground": "#e7e7e7"
     },
     "peacock.color": "eb9923",
     "python.analysis.typeCheckingMode": "basic"
